--- a/MyApplication/app/src/main/res/layout/item2.xml
+++ b/MyApplication/app/src/main/res/layout/item2.xml
@@ -3,12 +3,12 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp">
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/main_adv"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_centerInParent="true"
-        ></ImageView>
+        ></com.facebook.drawee.view.SimpleDraweeView>
     <TextView
         android:id="@+id/tv"
         android:layout_width="wrap_content"
