--- a/MyApplication/app/src/main/res/layout/activity_main2.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main2.xml
@@ -15,11 +15,15 @@
         android:layout_margin="10dp"
         android:clipToPadding="true"
         android:fitsSystemWindows="true" />
-
-    <com.hjm.bottomtabbar.BottomTabBar
-        android:id="@+id/mBottomTabBar"
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/tabs"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="48dip" />
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
 
 </LinearLayout>
