--- a/MyApplication/app/src/main/res/layout/item_f2.xml
+++ b/MyApplication/app/src/main/res/layout/item_f2.xml
@@ -1,48 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <ScrollView
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
+        <com.facebook.drawee.view.SimpleDraweeView
+            android:id="@+id/main_adv"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            fresco:roundAsCircle="true"
+            android:layout_centerInParent="true"
+            ></com.facebook.drawee.view.SimpleDraweeView>
         <LinearLayout
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/director"
+                android:id="@+id/phoneNumber"
                 android:textColor="@color/colortext"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="15dp"/>
             <TextView
                 android:textColor="@color/colortext"
-                android:id="@+id/actors"
+                android:id="@+id/time"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="15dp" />
             <TextView
                 android:textColor="@color/colortext"
-                android:id="@+id/description"
+                android:id="@+id/msg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
                 android:textSize="15dp" />
-            <TextView
-                android:layout_marginRight="30dp"
-                android:gravity="right"
-                android:textColor="@color/colortext"
-                android:id="@+id/open"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="展开"
-                android:textSize="20dp" />
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_f1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
         </LinearLayout>
-    </ScrollView>
+    </LinearLayout>
 
 </LinearLayout>
