--- a/MyApplication/app/src/main/res/layout/threefragment.xml
+++ b/MyApplication/app/src/main/res/layout/threefragment.xml
@@ -1,21 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-   <TextView
-       android:id="@+id/director"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:textSize="20dp"/>
-
+    android:layout_width="match_parent"
+    android:background="@mipmap/bg_colorful"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical">
     <TextView
-        android:id="@+id/actors"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="20dp" />
-
+        android:layout_height="80dp"
+        android:text="发现"
+        android:textColor="#fff"
+        android:textSize="20sp"
+        android:background="#f00"
+        android:gravity="center"/>
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="50dp"
         android:id="@+id/rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_width="400dp"
+        android:layout_height="344dp"
+        android:layout_weight="0.22"></android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/bt"
+        android:background="#4bf14b"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#fff"
+        android:text="换一批" />
 </LinearLayout>
