--- a/MyApplication/app/src/main/res/layout/item.xml
+++ b/MyApplication/app/src/main/res/layout/item.xml
@@ -16,5 +16,6 @@
         android:textColor="@color/colortext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:textSize="20dp"/>
 </LinearLayout>
