--- a/MyApplication/app/src/main/res/layout/item2.xml
+++ b/MyApplication/app/src/main/res/layout/item2.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
+
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/main_adv"
         android:layout_width="match_parent"
         android:layout_height="150dp"
-        android:layout_centerInParent="true"
-        ></com.facebook.drawee.view.SimpleDraweeView>
+        android:layout_centerInParent="true"></com.facebook.drawee.view.SimpleDraweeView>
+
     <TextView
         android:id="@+id/tv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20dp"/>
+        android:gravity="center"
+        android:textSize="20dp" />
 </LinearLayout>
