--- a/MyApplication/app/src/main/res/layout/onefragment.xml
+++ b/MyApplication/app/src/main/res/layout/onefragment.xml
@@ -1,43 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".View.MainActivity">
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="150dp">
+
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_width="match_parent"
             android:layout_height="150dp" />
+
         <EditText
             android:id="@+id/etSearch"
             android:layout_width="200dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
             android:background="#535151"
             android:drawableLeft="@mipmap/sea"
-            android:hint="念天堂"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="center"
-            android:textColorHint="#fff"
-            android:layout_height="30dp" />
+            android:hint="念天堂"
+            android:textColorHint="#fff" />
     </FrameLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="精彩推荐"
-            android:textSize="20dp"/>
+            android:textSize="20dp" />
     </LinearLayout>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rlv"
         android:layout_width="match_parent"
