--- a/MyApplication/app/src/main/res/layout/twofragment.xml
+++ b/MyApplication/app/src/main/res/layout/twofragment.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-   <TextView
-       android:id="@+id/director"
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:textSize="20dp"/>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/actors"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:text="专辑"
+        android:gravity="center"
+        android:layout_height="35dp"
         android:textSize="20dp" />
 
     <android.support.v7.widget.RecyclerView
