--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -1,23 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.bj.myapplication.View.ResideLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@mipmap/bg_colorful"
-    tools:context=".View.MainActivity">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@mipmap/bottom_bg"
-        android:layout_alignParentBottom="true"/>
+    android:layout_height="match_parent">
 
-    <com.hjm.bottomtabbar.BottomTabBar
-        android:id="@+id/bottom_tab_bar"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.hjm.bottomtabbar.BottomTabBar>
+        <include layout="@layout/ce"/>
+        <include layout="@layout/zhu"/>
 
-
-</RelativeLayout>
+</com.bj.myapplication.View.ResideLayout>
