--- a/MyApplication/app/src/main/res/layout/fourfragment.xml
+++ b/MyApplication/app/src/main/res/layout/fourfragment.xml
@@ -6,21 +6,7 @@
     android:background="@mipmap/bg_colorful"
     >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#F44336"
-        >
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="我的"
-            android:textSize="20sp"
-            android:textColor="#ffff"
-            />
-
-    </LinearLayout>
+    <include layout="@layout/title"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
