--- a/MyApplication/app/src/main/res/layout/threefragment.xml
+++ b/MyApplication/app/src/main/res/layout/threefragment.xml
@@ -5,14 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:text="发现"
-        android:textColor="#fff"
-        android:textSize="20sp"
-        android:background="#f00"
-        android:gravity="center"/>
+    <include layout="@layout/title"></include>
     <android.support.v7.widget.RecyclerView
         android:layout_marginTop="50dp"
         android:id="@+id/rv"
