--- a/MyApplication/app/src/main/res/layout/twofragment.xml
+++ b/MyApplication/app/src/main/res/layout/twofragment.xml
@@ -3,14 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/actors"
-        android:layout_width="match_parent"
-        android:text="专辑"
-        android:gravity="center"
-        android:layout_height="35dp"
-        android:textSize="20dp" />
+    <include layout="@layout/title"></include>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
