--- a/MyApplication/app/src/main/res/layout/ce.xml
+++ b/MyApplication/app/src/main/res/layout/ce.xml
@@ -1,48 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#A0271E">
+    android:background="#A0271E"
+    android:orientation="vertical">
 
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/sdv_4"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
+        android:layout_marginTop="70dp"
+        app:actualImageScaleType="centerCrop"
         android:background="@mipmap/photo"
-        android:layout_marginTop="50dp"
-        android:layout_marginLeft="20dp"
-        />
-
+        android:layout_marginLeft="30dp"
+        app:roundAsCircle="false"
+        app:roundedCornerRadius="10dp"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="微影，微一下"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="20dp"
-        android:textColor="#ffff"
-        />
+        android:text="微影，微一下"
+        android:textColor="#ffff" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/my_collection"
-            />
+            android:background="@mipmap/my_collection" />
 
         <TextView
+            android:id="@+id/tv_shoucang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="我的收藏"
-            android:textColor="#ffff"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="#ffff" />
 
     </LinearLayout>
 
@@ -50,175 +51,165 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/my_down"
-            />
+            android:background="@mipmap/my_down" />
 
         <TextView
+            android:id="@+id/tv_xiazai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="我的下载"
-            android:textColor="#ffff"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="#ffff" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/collection_select"
-            />
+            android:background="@mipmap/collection_select" />
 
         <TextView
+            android:id="@+id/tv_fuli"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="福利"
-            android:textColor="#ffff"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="#ffff" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/collection"
-            />
+            android:background="@mipmap/collection" />
 
         <TextView
+            android:id="@+id/tv_fenxiang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="分享"
-            android:textColor="#ffff"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="#ffff" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/like"
-            />
+            android:background="@mipmap/like" />
 
         <TextView
+            android:id="@+id/tv_fankui"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:text="建议反馈"
-            android:textColor="#ffff"
-            android:layout_marginLeft="10dp"
-            />
+            android:textColor="#ffff" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="20dp"
-        android:orientation="horizontal"
         android:layout_marginTop="20dp"
-        >
+        android:orientation="horizontal">
+
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginLeft="30dp"
-            android:background="@mipmap/my_set"
-            />
+            android:background="@mipmap/my_set" />
 
         <TextView
+            android:id="@+id/tv_shezhi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="设置"
-            android:textColor="#ffff"
             android:layout_marginLeft="10dp"
-            />
+            android:text="设置"
+            android:textColor="#ffff" />
 
     </LinearLayout>
-
-
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal"
         android:layout_marginTop="300dp"
-        >
+        android:orientation="horizontal">
 
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:orientation="horizontal"
             android:layout_marginTop="20dp"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_marginLeft="30dp"
                 android:background="@mipmap/my"
+
                 />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="关于"
-                android:textColor="#ffff"
                 android:layout_marginLeft="10dp"
-                />
+                android:text="关于"
+                android:textColor="#ffff" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="20dp"
-            android:orientation="horizontal"
             android:layout_marginTop="20dp"
-            >
+            android:orientation="horizontal">
+
             <ImageView
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_marginLeft="30dp"
-                android:background="@mipmap/my_everyone"
-                />
+                android:background="@mipmap/my_everyone" />
 
             <TextView
+                android:id="@+id/tv_zhuti"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="主题"
-                android:textColor="#ffff"
                 android:layout_marginLeft="10dp"
-                />
+                android:text="主题"
+                android:textColor="#ffff" />
 
         </LinearLayout>
-
 
 
     </LinearLayout>
