--- a/MyApplication/app/src/main/res/layout/onefragment.xml
+++ b/MyApplication/app/src/main/res/layout/onefragment.xml
@@ -18,15 +18,15 @@
 
         <EditText
             android:id="@+id/etSearch"
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="30dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="30dp"
-            android:background="#535151"
+            android:background="@null"
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:gravity="center"
-            android:hint="念天堂"
+            android:hint="一念天堂"
             android:textColorHint="#fff" />
     </FrameLayout>
 
