--- a/MyApplication/app/src/main/res/layout/activity_set.xml
+++ b/MyApplication/app/src/main/res/layout/activity_set.xml
@@ -12,14 +12,15 @@
         android:layout_height="70dp"
         android:background="#F44336"
         >
+
         <TextView
+            android:id="@+id/textView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="我的"
-            android:textSize="20sp"
             android:textColor="#ffff"
-            />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
